--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -13,7 +13,7 @@
   box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
 }
 .sctn1 .abs {
-  position: relative;
+  position: absolute;
 }
 .sctn1 .flower-container {
   z-index: 100;
@@ -88,8 +88,8 @@
   transform: rotateY(180deg);
 }
 .sctn1 .watercolor3 {
-  width: 130%;
-  opacity: 0.8;
+  width: 100%;
+  opacity: 0.9;
 }
 .sctn1 .content {
   z-index: 100;
@@ -98,8 +98,8 @@
   justify-content: center;
   align-items: center;
   width: 90%;
-  height: 70%;
-  background-color: rgb(255, 255, 255);
+  height: 60%;
+  background-color: rgba(255, 255, 255, 0.726);
   margin: 0 auto;
 }
 .sctn1 .content .first-container {
@@ -231,9 +231,11 @@ li {
 }
 
 .sctn {
+  background-color: #fdf9ec;
+}
+.sctn .sc {
   overflow: hidden;
   position: relative;
-  background-color: #fdf9ec;
   display: grid;
   place-items: center;
 }
