--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -1,3 +1,4 @@
 @use 'main_components/reset';
-@use 'main_components/section1.scss';
 @use 'main_components/landing';
+@use 'main_components/section1.scss';
+@use 'main_components/section2';
