--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -56,76 +56,6 @@ li {
   width: 115%;
   opacity: 0.8;
 }
-.sctn .content_sect3 {
-  display: grid;
-  place-items: center;
-  width: 90%;
-}
-.sctn .content_sect3 .dress_icon {
-  max-width: 18%;
-  fill: #202020;
-}
-.sctn .content_sect3 .dresscode {
-  margin-top: 1rem;
-  padding: 0.5rem 1rem;
-  background-color: #f3adb9;
-  font-weight: 300;
-  text-align: center;
-  font-size: 1.75rem;
-}
-.sctn .content_sect3 .half {
-  display: grid;
-  grid-auto-flow: column;
-  width: 95%;
-  margin-top: 2rem;
-}
-.sctn .content_sect3 .half .line__container {
-  display: grid;
-  place-items: center;
-}
-.sctn .content_sect3 .half .line__container .line {
-  display: block;
-  width: 1px;
-  height: calc(100% + 0.1rem);
-  background-color: #202020;
-  transform: translate(6px, -5px);
-}
-.sctn .content_sect3 .half .men, .sctn .content_sect3 .half .women {
-  font-family: "Work Sans";
-}
-.sctn .content_sect3 .half .men ul, .sctn .content_sect3 .half .women ul {
-  padding: 0;
-  display: grid;
-  place-items: center;
-  text-transform: capitalize;
-}
-.sctn .content_sect3 .half .men ul h3, .sctn .content_sect3 .half .women ul h3 {
-  margin-bottom: 0.75rem;
-  color: #202020;
-  font-size: 1.5rem;
-}
-.sctn .content_sect3 .half .men li, .sctn .content_sect3 .half .women li {
-  text-align: center;
-  font-size: 1.25rem;
-  font-weight: 300;
-}
-.sctn .content_sect3 h3 {
-  font-family: "Work Sans";
-  font-weight: 400;
-  font-size: 1.25rem;
-}
-.sctn .content_sect3 h3::first-letter {
-  text-transform: uppercase;
-}
-.sctn .content_sect3 .reserva_color {
-  margin-top: 1.5rem;
-}
-
-.sctn3 .bottom-sctn-3 {
-  position: absolute;
-  width: 130%;
-  top: 0;
-}
 
 .familyName {
   position: absolute;
@@ -327,7 +257,7 @@ li {
 .sctn1 .content .first-container .reason {
   margin-top: 0.5rem;
   top: 0.5rem;
-  font-size: 1.3rem;
+  font-size: 1.25rem;
   font-weight: 400;
 }
 .sctn1 .content .first-container .reason::first-letter {
@@ -345,7 +275,7 @@ li {
   align-items: center;
   font-family: "Parisienne", cursive;
   text-transform: capitalize;
-  font-size: 5.5rem;
+  font-size: 4.5rem;
   font-weight: 100;
 }
 .sctn1 .content .first-container .main-text .y {
@@ -421,7 +351,7 @@ li {
 }
 
 .sctn2 {
-  margin-top: -5rem;
+  margin-top: -3rem;
 }
 .sctn2 .corner-1-sctn-2 {
   width: 100%;
@@ -472,6 +402,78 @@ li {
   width: 15%;
   right: 7%;
   bottom: 35%;
+}
+
+.sctn3 .bottom-sctn-3 {
+  position: absolute;
+  width: 130%;
+  top: 0;
+}
+.sctn3 .content_sect3 {
+  background-color: white;
+  display: grid;
+  place-items: center;
+  width: 90%;
+  padding: 2rem 0;
+}
+.sctn3 .content_sect3 .dress_icon {
+  max-width: 18%;
+  fill: #202020;
+}
+.sctn3 .content_sect3 .dresscode {
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: #f3adb9;
+  font-weight: 300;
+  text-align: center;
+  font-size: 1.75rem;
+}
+.sctn3 .content_sect3 .half {
+  display: grid;
+  grid-auto-flow: column;
+  width: 95%;
+  margin-top: 2rem;
+}
+.sctn3 .content_sect3 .half .line__container {
+  display: grid;
+  place-items: center;
+}
+.sctn3 .content_sect3 .half .line__container .line {
+  display: block;
+  width: 1px;
+  height: calc(100% + 0.1rem);
+  background-color: #202020;
+  transform: translate(6px, -5px);
+}
+.sctn3 .content_sect3 .half .men, .sctn3 .content_sect3 .half .women {
+  font-family: "Work Sans";
+}
+.sctn3 .content_sect3 .half .men ul, .sctn3 .content_sect3 .half .women ul {
+  padding: 0;
+  display: grid;
+  place-items: center;
+  text-transform: capitalize;
+}
+.sctn3 .content_sect3 .half .men ul h3, .sctn3 .content_sect3 .half .women ul h3 {
+  margin-bottom: 0.75rem;
+  color: #202020;
+  font-size: 1.5rem;
+}
+.sctn3 .content_sect3 .half .men li, .sctn3 .content_sect3 .half .women li {
+  text-align: center;
+  font-size: 1.25rem;
+  font-weight: 300;
+}
+.sctn3 .content_sect3 h3 {
+  font-family: "Work Sans";
+  font-weight: 400;
+  font-size: 1.25rem;
+}
+.sctn3 .content_sect3 h3::first-letter {
+  text-transform: uppercase;
+}
+.sctn3 .content_sect3 .reserva_color {
+  margin-top: 1.5rem;
 }
 
 /*# sourceMappingURL=main.css.map */
