--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -3,3 +3,4 @@
 @use 'main_components/section1';
 @use 'main_components/section2';
 @use 'main_components/section3';
+@use 'main_components/section4';
