--- a/src/style/sass/main_components/variables.scss
+++ b/src/style/sass/main_components/variables.scss
@@ -6,3 +6,5 @@ $parisiene: 'Parisienne', cursive;
 $main-color:#701717;
 $background_1:#fdf9ec;
 $background_2:#E5DED9;
+$pink:#f3adb9;
+$text-color:#3f3f3f;
