--- a/src/style/sass/main_components/section1.scss
+++ b/src/style/sass/main_components/section1.scss
@@ -10,7 +10,7 @@
         margin-top: 1.5rem;
         text-transform: capitalize;
         font-family: $work-sans;
-        color: #3f3f3f;
+        color:$text-color;
         box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
     }
     
