--- a/src/style/sass/main_components/section4.scss
+++ b/src/style/sass/main_components/section4.scss
@@ -4,61 +4,76 @@
 .sctn4{
 
     .form{
+        background-color: white;
         color: $text-color;
         font-family: $work-sans;
         text-transform: capitalize;
         display: grid;
         grid-auto-flow: row;
-        gap: 1rem;
+        padding: 1rem;
+        gap: 2rem  1.5rem;
+        place-items: center; //////////////
 
         .check{
             display: grid;
+            width: 100%;
             grid-auto-flow: column;
-            
-            .rad{
-                border-radius: 50%;
-                -webkit-appearance: none;
-                -moz-appearance: none;
-                -ms-appearance: none;
-                -o-appearance: none;
-                appearance: none;
-                position: relative;
-                top: 13.33333px;
-                right: 0;
-                bottom: 0;
-                left: 0;
-                height: 35px;
-                width: 35px;
-                transition: all 0.15s ease-out 0s;
-                background: #cbd1d8;
-                border: none;
-                color: #fff;
-                cursor: pointer;
-                display: inline-block;
-                margin-right: 0.5rem;
-                outline: none;
-                position: relative;
-                z-index: 1000;
+            align-self: center;
+            justify-content: space-between;
 
-                // &:hover {
-                //     background: #9faab7;
-                //   }
-                &:checked {
-                    background: $pink;
-                  }
+            .label_check{
 
-                &:checked::before {
-                    width: 35px;
+                display: grid;
+                grid-auto-flow: row;
+                gap: .95rem;
+                justify-content: center;
+                text-align: center;
+
+                .rad{
+                    border-radius: 50%;
+                    -webkit-appearance: none;
+                    -moz-appearance: none;
+                    -ms-appearance: none;
+                    -o-appearance: none;
+                    appearance: none;
+                    position: relative;
+                    top: 13.33333px;
+                    right: 0;
+                    bottom: 0;
+                    left: 0;
                     height: 35px;
-                    display:flex;
-                    content: "\2713";
-                    font-size: 25px;
-                    font-weight:bold;
-                    position: absolute;
-                    align-items:center;
-                    justify-content:center;
-                    // font-family:'Font Awesome 5 Free';
-                  }
+                    width: 35px;
+                    transition: all 0.15s ease-out 0s;
+                    background: #cbd1d8;
+                    border: none;
+                    color: #fff;
+                    cursor: pointer;
+                    display: inline-block;
+                    // margin-right: 0.5rem;
+                    outline: none;
+                    position: relative;
+                    z-index: 1000;
+    
+                    // &:hover {
+                    //     background: #9faab7;
+                    //   }
+                    &:checked {
+                        background: $pink;
+                      }
+    
+                    &:checked::before {
+                        width: 35px;
+                        height: 35px;
+                        display:flex;
+                        content: "\2713";
+                        font-size: 25px;
+                        font-weight:bold;
+                        position: absolute;
+                        align-items:center;
+                        justify-content:center;
+                        // font-family:'Font Awesome 5 Free';
+                      }
+                }
             }
 
 
@@ -78,6 +93,7 @@
             all: unset;
             background-color: $pink;
             font-family: $work-sans;
+            width: 70%;
             // color:$text-color;
             text-align: center;
             padding: .75rem 1rem;
