--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -7,6 +7,12 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
+}
+
 section {
   height: 500vh;
 }
