--- a/src/style/sass/main_components/section4.scss
+++ b/src/style/sass/main_components/section4.scss
@@ -10,8 +10,8 @@
         text-transform: capitalize;
         display: grid;
         grid-auto-flow: row;
-        padding: 1rem;
-        gap: 2rem  1.5rem;
+        padding: 2rem 1rem;
+        gap: 3rem  1.5rem;
         place-items: center; //////////////
 
         .check{
