--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -1,7 +1,7 @@
 @use "variables.scss" as *;
 
 .sctn3{
-
+    margin-top: -3rem;
     .bottom-sctn-3{
         position: absolute;
         width: 130%;
